# document_record_inspector

./: .gitignore  README.md  TEMPLATE_MANIFEST.json  openapi.snapshot.json  pyproject.toml  tool.toml
docs/: SECURITY_MODEL.md  TECHVAULT_REFERENCE_TOOL_STANDARD.md  TOOL_COMPLETION_CHECKLIST.md  TOOL_DOCUMENT_RECORD_INSPECTOR_EXECUTION_PLAN.md  TOOL_DOCUMENT_RECORD_INSPECTOR_ROADMAP.md  TOOL_DOCUMENT_RECORD_INSPECTOR_SOT.md  TOOL_TEMPLATE.md
docs/prompts/: 00_scaffold_repo.md  01_contracts_and_determinism.md  01_schema_contracts.md  02_service_layer.md  03_api_adapter.md  03_service_layer_ordering.md  04_api_interface.md  04_cli_adapter.md  05_openapi_snapshot.md  06_determinism_and_hash_tests.md  06_determinism_tests.md  07_api_smoke_tests.md  07_final_gate.md  08_cli_interface.md  08_cli_smoke_tests.md  09_platform_registration.md  09_release_readiness.md  10_sot_invariant_check.md  README.md
docs/tool_build_prompts/: document_record_inspector.md
docs/tool_specs/: Copilot_prompt.md  document_record_inspector.md
document_record_inspector/: __init__.py  tool.py
document_record_inspector/api/: __init__.py  deps.py  openapi_snapshot.py  router.py  schemas.py
document_record_inspector/cli/: __init__.py  __main__.py  main.py
document_record_inspector/core/: __init__.py  catalog_loader.py  determinism.py  service.py
tests/: __init__.py  conftest.py  test_api_smoke.py  test_cli_smoke.py  test_contract_schemas.py  test_determinism_json.py  test_facade.py  test_idempotency.py  test_migrations.py  test_openapi_snapshot.py  test_ordering_pagination.py  test_router_api.py  test_security_authorization.py  test_service.py
tests/fixtures/: sample_record.json
