[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-record-inspector"
version = "0.1.0"
description = "Deterministic TechVault forensic inspection tool for a single document record"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TechVault Team" }]
dependencies = [
    "fastapi",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "ruff",
    "sqlalchemy",
]

[project.scripts]
document-record-inspector = "document_record_inspector.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["document_record_inspector*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "PLC0415", "BLE001"]
ignore = ["E501"]
